--- a/hacks.html
+++ b/hacks.html
@@ -29,7 +29,7 @@
  hall of fame at</h1>
  </div>
  <div class="des">
-  <p>You can Add Desccription Here...</p>
+  <p>my pinpad</p>
  <button>Know More...</button>
  </div>
  </div>
